De-async the MB http calls